[project]
name = "ai-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv==0.9.9",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-openai==0.3.28",
    "langsmith==0.4.10",
    "openai==1.98.0",
    "autogen>=0.9.7",
    "python-dotenv==1.1.1",
]
